--- a/seminars/seminar_09/Seminar_9.ipynb
+++ b/seminars/seminar_09/Seminar_9.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -101,43 +101,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_derivative_x(\n",
-    "    prevImg,\n",
-    "    keypoint,\n",
-    "    winSize,\n",
-    ") -> np.array:\n",
-    "    pass\n",
+    "def get_derivative_x(img, keypoint, winSize):\n",
+    "    \"\"\"Compute x-derivative at the keypoint location within the window.\"\"\"\n",
+    "    x, y = int(keypoint[0]), int(keypoint[1])\n",
+    "    sobel_x = cv2.Sobel(img, cv2.CV_64F, 1, 0, ksize=5)\n",
+    "    return sobel_x[y - winSize[1]//2:y + winSize[1]//2 + 1, x - winSize[0]//2:x + winSize[0]//2 + 1]\n",
     "\n",
     "\n",
-    "# arguments like in cv2 lib\n",
-    "def my_calcOpticalFlowPyrLK(\n",
-    "    prevImg,\n",
-    "    nextImg,\n",
-    "    prevPts,\n",
-    "    nextPts, #None is our case\n",
-    "    winSize,\n",
-    "    #maxLevel, if you want to be an expert in CV,\n",
-    "    #uncomment it and apply in LK method :)\n",
-    ") -> np.array:\n",
+    "def get_derivative_y(img, keypoint, winSize):\n",
+    "    \"\"\"Compute y-derivative at the keypoint location within the window.\"\"\"\n",
+    "    x, y = int(keypoint[0]), int(keypoint[1])\n",
+    "    sobel_y = cv2.Sobel(img, cv2.CV_64F, 0, 1, ksize=5)\n",
+    "    return sobel_y[y - winSize[1]//2:y + winSize[1]//2 + 1, x - winSize[0]//2:x + winSize[0]//2 + 1]\n",
     "\n",
-    "    '''\n",
-    "    You should return output vector of 2D points\n",
-    "    (with single-precision floating-point coordinates)\n",
-    "    containing the calculated new positions of input features in the second image\n",
-    "    '''\n",
+    "\n",
+    "def get_derivative_t(prevImg, nextImg, keypoint, winSize):\n",
+    "    \"\"\"Compute temporal derivative at the keypoint location.\"\"\"\n",
+    "    x, y = int(keypoint[0]), int(keypoint[1])\n",
+    "    patch_prev = prevImg[y - winSize[1]//2:y + winSize[1]//2 + 1, x - winSize[0]//2:x + winSize[0]//2 + 1]\n",
+    "    patch_next = nextImg[y - winSize[1]//2:y + winSize[1]//2 + 1, x - winSize[0]//2:x + winSize[0]//2 + 1]\n",
+    "    return patch_next - patch_prev\n",
+    "\n",
+    "\n",
+    "def my_calcOpticalFlowPyrLK(prevImg, nextImg, prevPts, winSize):\n",
     "    nextPts = []\n",
-    "\n",
     "    for keypoint in prevPts:\n",
+    "        keypoint = keypoint[0]\n",
+    "        dx = get_derivative_x(prevImg, keypoint, winSize)\n",
+    "        dy = get_derivative_y(prevImg, keypoint, winSize)\n",
+    "        dt = get_derivative_t(prevImg, nextImg, keypoint, winSize)\n",
     "\n",
-    "        derivative_x = get_derivative_x(prevImg, keypoint, winSize)\n",
-    "        derivative_y = get_derivative_y(prevImg, keypoint, winSize)\n",
-    "        derivative_t = get_derivative_t(prevImg, keypoint, winSize)\n",
+    "        # Construct A and b matrices\n",
+    "        A = np.vstack((dx.flatten(), dy.flatten())).T\n",
+    "        b = -dt.flatten()\n",
     "\n",
-    "        # find a matrix and solve linear equation system\n",
-    "        pass\n",
+    "        # Solve for p using least squares\n",
+    "        p, _, _, _ = np.linalg.lstsq(A, b, rcond=None)\n",
     "\n",
-    "        # find result coordinates\n",
-    "        nextPts.append()\n",
+    "        # Update keypoint position\n",
+    "        new_x = keypoint[0] + p[0]\n",
+    "        new_y = keypoint[1] + p[1]\n",
+    "        nextPts.append([new_x, new_y])\n",
     "\n",
     "    return np.expand_dims(np.stack(nextPts), axis=1)"
    ]
@@ -152,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +165,7 @@
      "text": [
       "OpenCV: FFMPEG: tag 0x5634504d/'MP4V' is not supported with codec id 12 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
       "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n",
-      "100%|█████████▉| 913/914 [00:04<00:00, 184.39it/s]"
+      "100%|█████████▉| 913/914 [00:01<00:00, 597.99it/s]"
      ]
     },
     {
@@ -262,53 +266,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"output_LK.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "IPython.display.Video('output_LK.mp4')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Вопрос 2\n",
-    "\n",
-    "Какие проблемы в текущей реализации вы увидели при просмотре результирующего видео? Как их можно устранить?\n",
-    "\n",
-    "**Ответ:**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Задание 2\n",
-    "\n",
-    "Напишите код, устраняющий одну из проблем, покажите результат до/после."
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -320,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -329,14 +286,7 @@
      "text": [
       "OpenCV: FFMPEG: tag 0x5634504d/'MP4V' is not supported with codec id 12 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
       "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n",
-      "  0%|          | 1/914 [00:00<02:51,  5.31it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 913/914 [01:18<00:00, 11.62it/s]\n"
+      "100%|█████████▉| 913/914 [00:19<00:00, 47.17it/s]"
      ]
     },
     {
@@ -344,6 +294,13 @@
      "output_type": "stream",
      "text": [
       "No frames grabbed!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -393,31 +350,6 @@
    "source": [
     "Посмотрим, что получилось"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"output.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "IPython.display.Video('output_Farneback.mp4')"
-   ]
   }
  ],
  "metadata": {
@@ -436,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
